--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>jlayer</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>mp3spi</artifactId>
+			<version>1.9.5.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
